--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.25",
     "date-and-time": "^2.4.1",
     "react": "^18.2.0",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
